<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.fragments.driver.DriverRegistrationFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/vehicle_first_form">
            <EditText
                android:id="@+id/make"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="96dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/make"
                android:padding="18dp"
                android:selectAllOnFocus="true"
                android:textColor="?attr/textColor"
                android:textColorHint="?attr/lightTextColor"
                />

            <EditText
                android:id="@+id/vehicle_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/vehicle_model"
                android:inputType="text"
                android:padding="18dp"
                android:selectAllOnFocus="true"
                android:textColor="?attr/textColor"
                android:textColorHint="?attr/lightTextColor"
                />
            <EditText
                android:id="@+id/vehicle_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/vehicle_year"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:padding="18dp"
                android:textColor="?attr/textColor"
                android:textColorHighlight="?attr/textColor"
                android:textColorHint="?attr/lightTextColor"
                />
            <EditText
                android:id="@+id/vehicle_number_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/number_plate"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:padding="18dp"
                android:selectAllOnFocus="true"
                android:textColor="?attr/textColor"
                android:textColorHighlight="?attr/textColor"
                android:textColorHint="?attr/lightTextColor"
                />
            <EditText
                android:id="@+id/vehicle_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/vehicle_color"
                android:inputType="text"
                android:padding="18dp"
                android:selectAllOnFocus="true"
                android:textColor="?attr/textColor"
                android:textColorHint="?attr/lightTextColor"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <TextView
            android:id="@+id/vehicle_request_sent_msg"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="true"
            android:text="@string/request_sent"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@color/success_green"
            android:textSize="18sp"
            />
        <ProgressBar
            android:id="@+id/vehicle_form_sent_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/vehicle_registration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_vehicle"
            android:enabled="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="48dp"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
</FrameLayout>