<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.fragments.driver.DriverRegistrationFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/first_form">
            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="96dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/first_name"
                android:padding="18dp"
                android:selectAllOnFocus="true"
                android:textColor="?attr/textColor"
                android:textColorHint="?attr/lightTextColor"
                />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:padding="18dp"
                android:selectAllOnFocus="true"
                android:textColor="?attr/textColor"
                android:textColorHint="?attr/lightTextColor"
                />
            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/date_of_birth"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionDone"
                android:inputType="date"
                android:padding="18dp"
                android:focusable="false"
                android:textColor="?attr/textColor"
                android:textColorHighlight="?attr/textColor"
                android:textColorHint="?attr/lightTextColor"
                android:textIsSelectable="false"
                />
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/phone_number"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:padding="18dp"
                android:selectAllOnFocus="true"
                android:textColor="?attr/textColor"
                android:textColorHighlight="?attr/textColor"
                android:textColorHint="?attr/lightTextColor"
                />
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/second_form">
            <EditText
                android:id="@+id/CNIC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="96dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/first_name"
                android:padding="18dp"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:textColor="?attr/textColor"
                android:textColorHint="?attr/lightTextColor"
                />

            <EditText
                android:id="@+id/licenseNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/last_name"
                android:inputType="number"
                android:padding="18dp"
                android:selectAllOnFocus="true"
                android:textColor="?attr/textColor"
                android:textColorHint="?attr/lightTextColor"
                />
        </LinearLayout>

        <!-- Buttons -->
        <Button
            android:id="@+id/form_nav_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/transparent_rounded_btn"
            android:elegantTextHeight="true"
            android:layout_weight="2"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="true"
            android:text="@string/next_form"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="?attr/foregroundColor"
            android:textSize="18sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <TextView
            android:id="@+id/request_sent_msg"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="true"
            android:text="@string/request_sent"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@color/success_green"
            android:textSize="18sp"
            />
        <ProgressBar
            android:id="@+id/form_sent_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/driver_registration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_driver"
            android:enabled="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="48dp"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
</FrameLayout>